Finished the Home page module

--- a/src/app/components/admin/admin-home-page/admin-home-page.component.css
+++ b/src/app/components/admin/admin-home-page/admin-home-page.component.css
@@ -4,7 +4,8 @@ input, label {
 }
 
 input[type="url"],
-input[type="text"] {
+input[type="text"],
+textarea[type="text"] {
     border-radius: 0;
 }
 
