--- a/src/app/components/core/home/home.component.css
+++ b/src/app/components/core/home/home.component.css
@@ -235,24 +235,24 @@ p.num-def {
     padding-bottom: 3em;
 }
 
-img.aasld {
+img.sponsor-one {
     max-width: 208px;
     vertical-align: middle;
     padding-top: 1em;
 }
 
-img.aga {
+img.sponsor-two {
     max-width: 280px;
     vertical-align: middle;
     padding-top: 2em;
 }
 
-img.asge {
+img.sponsor-three {
     max-width: 186px;
     vertical-align: middle;
 }
 
-img.ssat {
+img.sponsor-four {
     max-width: 162px;
     vertical-align: middle;
 }
