--- a/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
+++ b/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
@@ -1,41 +1,6 @@
 <!-- * ADMIN-CARDS-EDIT * -->
-<div class="row mb-5 mt-3">
-    <div class="col-md-6 mx-auto">
-        <div class="card">
-            <div class="card-body">
-                <h1 class="text-center text-secondary pb-4 pt-3">
-                    <span class="text-dark">
-               <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
-                    alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
-                        <i class="fa fa-passport"></i>&nbsp;Admin
-                    </span> Cards
-                </h1>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="row mb-4">
-    <div class="container">
-        <a class="btn btn-default"
-           [routerLink]="['/admin/pages']"><i class="fal fa-arrow-circle-left"></i>&nbsp;All Pages
-        </a>
-    </div>
-</div>
-
-<div class="row text-right mb-4">
-    <div class="container">
-        <div class="btn-group float-right" role="group" aria-label="Basic example">
-            <a class="btn btn-warning"
-               [routerLink]="['/admin/pages']">
-                <i class="fa fa-undo"></i>&nbsp;Cancel
-            </a>
-        </div>
-    </div>
-</div>
-
 <!-- * Image Uploader * -->
-<div class="row mb-5">
+<div class="row mb-5 mt-5">
     <div class="container">
         <div class="col">
             <div class="card bg-light image-uploader">
@@ -96,7 +61,7 @@
 
 <!-- * CARDS * -->
 
-<div class="row">
+<div class="row mt-5">
     <div class="container new-page">
         <div class="row">
             <!-- * Card 1 * -->
@@ -190,7 +155,7 @@
 
                             <button type="submit"
                                     [disabled]="!cardForm1.valid"
-                                    class="btn btn-primary btn-sm mb-5">
+                                    class="btn btn-secondary full-width mb-3 mt-2">
                                 <i class="fa fa-passport"></i>&nbsp;Update
                             </button>
                         </form>
@@ -290,8 +255,8 @@
 
 
                             <button type="submit"
-                                    [disabled]="!cardForm1.valid"
-                                    class="btn btn-primary btn-sm mb-5">
+                                    [disabled]="!cardForm2.valid"
+                                    class="btn btn-secondary full-width mb-3 mt-2">
                                 <i class="fa fa-passport"></i>&nbsp;Update
                             </button>
                         </form>
@@ -392,8 +357,8 @@
 
 
                             <button type="submit"
-                                    [disabled]="!cardForm1.valid"
-                                    class="btn btn-primary btn-sm mb-5">
+                                    [disabled]="!cardForm3.valid"
+                                    class="btn btn-secondary full-width mb-3 mt-2">
                                 <i class="fa fa-passport"></i>&nbsp;Update
                             </button>
                         </form>
