Navbar has been added to home page, and pages-navbar added to all the other sections to have a seperate homepage navbar

--- a/src/app/components/admin/admin-home-page/admin-home-page.component.html
+++ b/src/app/components/admin/admin-home-page/admin-home-page.component.html
@@ -340,7 +340,7 @@
                                                formControlName="sponsorOneImg">
                                     </div>
                                     <div class="form-group">
-                                        <label for="sponsorOneURL">Sponsor One Image URL</label>
+                                        <label for="sponsorOneURL">Sponsor One URL</label>
                                         <input type="text"
                                                class="form-control"
                                                id="sponsorOneURL"
@@ -368,7 +368,7 @@
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <label for="sponsorThreeImg">Sponsor Three Image URL</label>
+                                        <label for="sponsorThreeImg">Sponsor Three Image</label>
                                         <input type="text"
                                                class="form-control"
                                                id="sponsorThreeImg"
@@ -386,7 +386,7 @@
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <label for="sponsorFourImg">Sponsor Four Image URL</label>
+                                        <label for="sponsorFourImg">Sponsor Four Image</label>
                                         <input type="text"
                                                class="form-control"
                                                id="sponsorFourImg"
