--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -253,7 +253,8 @@
                                             id="calendarTitle"
                                             [(ngModel)]="page.calendarTitle"
                                             formControlName="calendarTitle">
-                                        <option *ngFor="let cal of calendars$ | async">
+                                        <option *ngFor="let cal of calendars$ | async"
+                                                [value]="cal.title">
                                             {{ cal.title }}
                                         </option>
                                     </select>
