--- a/src/app/components/pages/pages.component.html
+++ b/src/app/components/pages/pages.component.html
@@ -1,4 +1,4 @@
 <!-- * PAGES * -->
-<ddw-navbar></ddw-navbar>
+<!--<ddw-navbar></ddw-navbar>-->
 <router-outlet></router-outlet>
 <ddw-footer></ddw-footer>
