--- a/src/app/components/pages/presenters/presenters.component.html
+++ b/src/app/components/pages/presenters/presenters.component.html
@@ -1,4 +1,6 @@
 <!-- * PRESENTERS-PAGE * -->
+<ddw-pages-navbar></ddw-pages-navbar>
+
 <div *ngIf="page">
     <img [src]="page.bannerPhotoURL" class="bannerPhotoURL">
 
