--- a/src/app/components/pages/register/register.component.html
+++ b/src/app/components/pages/register/register.component.html
@@ -1,4 +1,5 @@
 <!-- * REGISTER-PAGE * -->
+<ddw-pages-navbar></ddw-pages-navbar>
 <div *ngIf="page">
     <img [src]="page.bannerPhotoURL" class="bannerPhotoURL">
 
