--- a/src/app/components/pages/news-and-media/news-and-media.component.html
+++ b/src/app/components/pages/news-and-media/news-and-media.component.html
@@ -1,4 +1,6 @@
 <!-- * NEWS-AND-MEDIA-PAGE * -->
+<ddw-pages-navbar></ddw-pages-navbar>
+
 <div *ngIf="page">
     <img [src]="page.bannerPhotoURL" class="bannerPhotoURL">
 
