--- a/src/app/components/core/home/home.component.html
+++ b/src/app/components/core/home/home.component.html
@@ -6,7 +6,7 @@
     <div class="hero">
         <div class="container text-center">
             <div class="col-auto offset-md-1 offset-sm-0">
-                <div class="header-content">
+                <div class="header-content" *ngIf="homePage">
                     <h1 class="title">{{ homePage.title }}</h1>
                     <h1 class="subtitle">{{ homePage.subtitle }} <span class="forTime">{{ homePage.forTime }}</span>
                     </h1>
@@ -49,7 +49,7 @@
 </div>
 
 
-<div class="row">
+<div class="row" *ngIf="homePage">
     <div class="container">
         <div class="col-md-7 offset-md-3 text-center">
             <h2 class="card-sec-title">{{ homePage.cardsTitle }}</h2>
@@ -60,7 +60,7 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row" *ngIf="homePage">
     <div class="container">
         <div class="card-sec-subtitle">
             <p> {{ homePage.cardsSubtitle }}</p>
@@ -84,7 +84,7 @@
 </div>
 
 <!-- * DDW Video * -->
-<div class="row bg-blue">
+<div class="row bg-blue" *ngIf="homePage">
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3 text-center">
@@ -113,7 +113,7 @@
 </div>
 
 <!-- * Featured Blog Posts * -->
-<div class="row featured">
+<div class="row featured" *ngIf="homePage">
     <div class="container">
         <div class="col-md-6 offset-md-3 text-center">
             <h2 class="card-sec-title">{{ homePage.postsTitle }}</h2>
@@ -134,7 +134,7 @@
                 </ddw-admin-featured-blog-posts>
             </div>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-5" *ngIf="homePage">
             <div class="col-md-4 offset-md-4 text-center">
                 <a [href]="homePage.postsButtonURL" target="_blank" class="btn btn-warning btn-lg">
                     {{ homePage.postsButtonText }}
@@ -145,7 +145,7 @@
 </div>
 
 <!-- * On Demand Offer * -->
-<div class="row on-demand-top">
+<div class="row on-demand-top" *ngIf="homePage">
     <div class="container">
         <div class="col-md-6 offset-md-3 text-center">
             <h2 class="card-sec-title">{{ homePage.onDemandTitle }}</h2>
@@ -156,12 +156,12 @@
     </div>
 </div>
 
-<div class="row on-demand-bottom">
+<div class="row on-demand-bottom" *ngIf="homePage">
     <div class="container">
         <div [innerHTML]="homePage.onDemandText"></div>
     </div>
 </div>
-<div class="row purchase">
+<div class="row purchase" *ngIf="homePage">
     <div class="col-md-4 offset-md-4 text-center">
         <a [href]="homePage.onDemandButtonURL"
            target="_blank" class="btn btn-warning btn-lg">
@@ -172,7 +172,7 @@
 
 
 <!-- * DDW By The Numbers * -->
-<div class="ddw-by-the-numbers">
+<div class="ddw-by-the-numbers" *ngIf="homePage">
     <div class="row">
         <div class="container">
             <div class="col-md-6 offset-md-3 text-center">
@@ -204,7 +204,7 @@
 </div>
 
 <!-- * Sponsoring Societies * -->
-<div class="row sponsors">
+<div class="row sponsors" *ngIf="homePage">
     <div class="container">
         <div class="col-md-6 offset-md-3 text-center">
             <h2 class="by-nums-title">{{ homePage.sponsorTitle }}</h2>
@@ -214,7 +214,7 @@
         </div>
     </div>
 </div>
-<div class="row text-center sponsor-images">
+<div class="row text-center sponsor-images" *ngIf="homePage">
     <div class="col-sm-3">
         <a [href]="homePage.sponsorOneURL">
             <img [src]="homePage.sponsorOneImg"
