--- a/src/app/components/pages/news-and-media/news-and-media.component.html
+++ b/src/app/components/pages/news-and-media/news-and-media.component.html
@@ -12,8 +12,9 @@
         <div class="container">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <div class="text-capitalize text-decoration-none">News</div>
+                    <div class="text-capitalize text-decoration-none">{{ page.category }}</div>
                 </li>
+                <li class="breadcrumb-item text-capitalize" *ngIf="page.isGrandchildPage">{{page.grandchildURL}}</li>
                 <li class="breadcrumb-item active">{{page.title}}</li>
             </ol>
         </div>
