Removed dynamic cards

--- a/src/app/components/pages/education/education.component.html
+++ b/src/app/components/pages/education/education.component.html
@@ -37,28 +37,28 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="container">
-            <div class="col-md-4 offset-md-4 text-center">
-                <h2 class="card-sec-title">Additional Details</h2>
-                <div class="col-4 offset-4">
-                    <div class="underline"></div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!--<div class="row">-->
+        <!--<div class="container">-->
+            <!--<div class="col-md-4 offset-md-4 text-center">-->
+                <!--<h2 class="card-sec-title">Additional Details</h2>-->
+                <!--<div class="col-4 offset-4">-->
+                    <!--<div class="underline"></div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
-    <div class="row cards">
-        <div class="container">
-            <div class="card-deck">
-                <div class="row">
-                    <ddw-admin-cards
-                            class="col-md-4"
-                            *ngFor="let cardEl of cards$ | async"
-                            [card]="cardEl">
-                    </ddw-admin-cards>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!--<div class="row cards">-->
+        <!--<div class="container">-->
+            <!--<div class="card-deck">-->
+                <!--<div class="row">-->
+                    <!--<ddw-admin-cards-->
+                            <!--class="col-md-4"-->
+                            <!--*ngFor="let cardEl of cards$ | async"-->
+                            <!--[card]="cardEl">-->
+                    <!--</ddw-admin-cards>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 </div>
