Commended out cards and posts sidenav links since they are now controlled form the Home page (temporarily)

--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -131,20 +131,20 @@
     </li>
 
     <!-- * Cards * -->
-    <li class="sidenav-item" *ngIf="isLoggedIn">
-        <a [routerLink]="['/admin/cards']" class="sidenav-link">
-            <i class="sidenav-icon ion ion-md-quote"></i>
-            <div><i class="fal fa-passport"></i>&nbsp;Cards</div>
-        </a>
-    </li>
+    <!--<li class="sidenav-item" *ngIf="isLoggedIn">-->
+        <!--<a [routerLink]="['/admin/cards']" class="sidenav-link">-->
+            <!--<i class="sidenav-icon ion ion-md-quote"></i>-->
+            <!--<div><i class="fal fa-passport"></i>&nbsp;Cards</div>-->
+        <!--</a>-->
+    <!--</li>-->
 
     <!-- * Featured Posts * -->
-    <li class="sidenav-item" *ngIf="isLoggedIn">
-        <a [routerLink]="['/admin/featured-posts']" class="sidenav-link">
-            <i class="sidenav-icon ion ion-md-quote"></i>
-            <div><i class="fal fa-passport"></i>&nbsp;Featured Posts</div>
-        </a>
-    </li>
+    <!--<li class="sidenav-item" *ngIf="isLoggedIn">-->
+        <!--<a [routerLink]="['/admin/featured-posts']" class="sidenav-link">-->
+            <!--<i class="sidenav-icon ion ion-md-quote"></i>-->
+            <!--<div><i class="fal fa-passport"></i>&nbsp;Featured Posts</div>-->
+        <!--</a>-->
+    <!--</li>-->
 
 
     <!-- * Users * -->
