Calendar is now correctly added shown on home page, ddw daily video only shown if has a video url

--- a/src/app/components/admin/admin-home-page/admin-home-page.component.html
+++ b/src/app/components/admin/admin-home-page/admin-home-page.component.html
@@ -496,6 +496,7 @@
                             <div class="form-group">
                                 <label>
                                     <h5>DDW Daily News Video</h5>
+                                    <p><small>If left blank, space will be removed from that blue section</small></p>
                                     <p class="text-light">URL needs to come from a embedded iFrame</p>
                                     <p class="text-light">ie. Go to YouTube video > share > embed > grab url from
                                         src="this-url"</p>
