--- a/src/app/components/core/home/home.component.css
+++ b/src/app/components/core/home/home.component.css
@@ -1,3 +1,9 @@
+h2 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 42px;
+    font-weight: 600;
+}
+
 a:link {
     color: #2e6da4;
 }
@@ -33,7 +39,7 @@ h1.title {
 h2.loc-date {
     color: #fff;
     font-weight: 600;
-    font-size: 26px;
+    font-size: 42px;
 }
 
 .forTime {
@@ -128,14 +134,16 @@ h1.time {
 /* Post-Meeting Resources */
 h2.card-sec-title {
     padding-top: 2em;
-    font-size: 30px;
+    font-size: 42px;
     font-family: Roboto, Helvetica, Arial, sans-serif;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .underline {
     border-bottom: 2px solid #FEB512;
     margin-top: 1em;
+    margin-left: 2em;
+    max-width: 5em;
 }
 
 .card-sec-subtitle {
@@ -163,6 +171,10 @@ h5 {
 
 iframe.daily-news {
     margin: 2em 0;
+}
+
+.video-spacer {
+    padding: 1.75em;
 }
 
 .ads {
@@ -210,7 +222,6 @@ div.row.on-demand-bottom > div.container > p {
     padding-top: 4em;
     padding-bottom: 4em;
 }
-
 
 .numbers {
 
